--- a/client/templates/navigation.html
+++ b/client/templates/navigation.html
@@ -12,7 +12,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Team <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="/createTeam">Create Team</a></li>
-                        <li><a href="/joinTeam">Join Team</a></li>
+                        <li><a href="/searchTeam">Join Team</a></li>
                         {{#if hasTeam}}
                             <li><a href="/team">Your Team</a></li>
                         {{/if}}
